- ADD: Columns in the log dialog can be sorted. (Boris)
- BUG: Crash in TSVNCache. See issue #91.
- BUG: File context menu shown if more than one folder was
       selected. See issue #92.
- BUG: Lock dialog could show folders. See issue #93.
- BUG: Commit dialog could crash when sorting. See issue #99.
- BUG: Installation for All Users didn't work properly. (Stefan)
- BUG: A file:/// path wasn't recognized as a valid windows path
       and a warning was shown even if the path was valid. (Stefan)

Version 1.2

Please first look at the release notes:
http://tortoisesvn.tigris.org/tsvn_1.2_releasenotes.html

- ADD: New commands to lock/unlock files. (Stefan)
- ADD: Locked files are listed in the commit dialog so the user
       won't forget to unlock them again. (Stefan)
- ADD: Filter for the log dialog. (Stefan)
- ADD: The three parts (log list, message, change-files-list) in the
       log dialog can now be individually resized. (Stefan)
- ADD: Files not part of the selected file/folder are shown grayed out
       in the log dialogs changed-file-list. (Stefan)
- ADD: New, much improved overlay cache. (Will Dean, Stefan)
- ADD: Option to resolve a conflicted file in the status list control. (Stefan)
- ADD: TortoiseSVN now uses its own sound files for errors, warnings
       and notifications in the progress dialog. (Stefan)
- ADD: Allow diffing of renamed/copied files in the log dialog. (George Wieggers)
- ADD: A website link starting with "tsvn:" starts TortoiseSVN with the
       checkout dialog. A link starting with "svn:" will start the
       repository browser. (Stefan)
- ADD: TortoiseMerge can ignore case-only changes when diffing. (Stefan)
- ADD: Autocompletion for language-dependent keywords (usually class/method/
       variable names) in the commit dialog. (Stefan)
- ADD: Bugtracking integration extended with regular expressions. (Stefan)
- ADD: The autocompletion feature can be deactivated in the settings. (Stefan)